Bug 300082 - fill with foreground/background color can affect locked/invisible layers
Summary: fill with foreground/background color can affect locked/invisible layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-15 18:40 UTC by Tom Hall
Modified: 2012-05-15 19:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Hall 2012-05-15 18:40:24 UTC
The shortcuts for "Fill with Background color" and "Fill with Foreground color" work on locked and/or invisible layers. They shouldn't.

Potentially quite dangerous. If a user has hidden a layer, it allows them to effectively wipe out everything on the layer without any indication that it has happened.

Reproducible: Always

Steps to Reproduce:
1. Lock or make invisible the current layer
2. press the shortcut for "Fill with background color" (or "Fill with foreground color")
Actual Results:  
Layer is filled with the current background (or foreground) colour.

Expected Results:  
Nothing. The layer is locked/invisible; it should not be affected.
Comment 1 Halla Rempt 2012-05-15 19:07:22 UTC
Git commit 990da89ce4b6e0b4f528a923d177402ff7ab61d4 by Boudewijn Rempt.
Committed on 15/05/2012 at 20:51.
Pushed by rempt into branch 'master'.

Don't fill layers that cannot be edited

I'm sure there are more issues like this...

M  +7    -0    krita/ui/kis_selection_manager.cc

http://commits.kde.org/calligra/990da89ce4b6e0b4f528a923d177402ff7ab61d4
Comment 2 Halla Rempt 2012-05-15 19:21:25 UTC
Git commit 47e7cf200cfe5781d51773ad80ddfe4daccf546d by Boudewijn Rempt.
Committed on 15/05/2012 at 20:51.
Pushed by rempt into branch 'calligra/2.4'.

Don't fill layers that cannot be edited

I'm sure there are more issues like this...

M  +7    -0    krita/ui/kis_selection_manager.cc

http://commits.kde.org/calligra/47e7cf200cfe5781d51773ad80ddfe4daccf546d