Don't fill layers that cannot be edited

BUG:300082

I'm sure there are more issues like this...